# multiverse

./: .gitignore  CMakeLists.txt  LICENSE-multiverse-3rdparty.txt  LICENSE-multiverse.txt  README.md
arnold/Procedural/: CMakeLists.txt
cmake/: AlembicBoost.cmake
cmake/Modules/: FindIlmBase.cmake  FindLibGit2.cmake  FindOpenEXR.cmake  FindPyIlmBase.cmake
examples/AbcClients/WFObjConvert/Tests/: CMakeLists.txt
lib/AbcOpenGL/: CMakeLists.txt
lib/Alembic/: AlembicConfig.cmake.in  CMakeLists.txt
lib/Alembic/Abc/Tests/: CMakeLists.txt
lib/Alembic/AbcCollection/Tests/: CMakeLists.txt
lib/Alembic/AbcCoreAbstract/Tests/: CMakeLists.txt
lib/Alembic/AbcCoreFactory/: IFactory.cpp  IFactory.h
lib/Alembic/AbcCoreGit/: All.h  AprImpl.cpp  AprImpl.h  ApwImpl.cpp  ApwImpl.h  ArImpl.cpp  ArImpl.h  AwImpl.cpp  AwImpl.h  CMakeLists.txt  CprData.cpp  CprData.h  CprImpl.cpp  CprImpl.h  CpwData.cpp  CpwData.h  CpwImpl.cpp  CpwImpl.h  Foundation.h  Git.cpp  Git.h  GitNew.cpp  GitNew.h  JSON.cpp  JSON.h  KeyStore.cpp  KeyStore.h  MetaDataMap.cpp  MetaDataMap.h  OrData.cpp  OrData.h  OrImpl.cpp  OrImpl.h  OwData.cpp  OwData.h  OwImpl.cpp  OwImpl.h  ReadWrite.cpp  ReadWrite.h  ReadWriteUtil.cpp  (+20 more)
lib/Alembic/AbcCoreGit/Tests/: ArchiveTests.cpp  ArrayPropertyTests.cpp  CMakeLists.txt  ConstantPropsNumSampsTest.cpp  HashesTests.cpp  ObjectTests.cpp  ScalarPropertyTests.cpp  SubDTest.cpp  TimeSamplingTests.cpp
lib/Alembic/AbcCoreGit/milliways/: BTree.h  BTree.impl.hpp  BTreeCommon.h  BTreeFileStorage.h  BTreeFileStorage.impl.hpp  BTreeNode.h  BTreeNode.impl.hpp  BlockStorage.h  BlockStorage.impl.hpp  CMakeLists.txt  KeyValueStore.h  KeyValueStore.impl.hpp  LRUCache.h  LRUCache.impl.hpp  Seriously.h  Seriously.impl.hpp  Utils.h  Utils.impl.hpp  config.h  config.h.cmake  glob.h  glob.impl.hpp  hashtable.h  hashtable.impl.hpp  lz4packer.impl.hpp  ordered_map.h  ordered_map.impl.hpp
lib/Alembic/AbcCoreHDF5/: StringReadUtil.cpp
lib/Alembic/AbcCoreHDF5/Tests/: CMakeLists.txt
lib/Alembic/AbcCoreOgawa/: AprImpl.cpp  ReadUtil.cpp  ReadUtil.h  SprImpl.cpp
lib/Alembic/AbcGeom/Tests/: CMakeLists.txt  PointsTest.cpp
lib/Alembic/AbcMaterial/Tests/: CMakeLists.txt
lib/Alembic/Util/: Config.h.in  Foundation.h
maya/AbcExport/: CMakeLists.txt
maya/AbcImport/: CMakeLists.txt
prman/Procedural/: CMakeLists.txt
python/PyAbcOpenGL/: CMakeLists.txt
python/PyAlembic/: CMakeLists.txt
python/PyAlembic/Tests/: CMakeLists.txt
